--- a/src/angular-app/languageforge/lexicon/views/edit.html
+++ b/src/angular-app/languageforge/lexicon/views/edit.html
@@ -36,8 +36,8 @@
     				<table class="table table-condensed ">
     					<tbody>
     						<tr data-ng-class="{selected: e.id == currentEntry.id}" class="animate-repeat" data-ng-repeat="e in show.entries track by e.id">
-    							<td style="width:50%" title="{{getLexemeForDisplay(e)}}" data-ng-click="editEntry(e.id)">{{getLexemeForDisplay(e)| characters:40}}</td>
-    							<td title="{{getDefinitionOrGloss(e)}}" data-ng-click="editEntry(e.id)">{{getDefinitionOrGloss(e)| characters:40}}</td>
+    							<td style="width:50%; text-align:{{lexemeAlign(e)}}" title="{{getLexemeForDisplay(e)}}" data-ng-click="editEntry(e.id)">{{getLexemeForDisplay(e)| characters:40}}</td>
+    							<td style="text-align:{{definitionOrGlossAlign(e)}}"title="{{getDefinitionOrGloss(e)}}" data-ng-click="editEntry(e.id)">{{getDefinitionOrGloss(e)| characters:40}}</td>
     						</tr>
     					</tbody>
     				</table>
