--- a/src/angular-app/languageforge/lexicon/views/settings.html
+++ b/src/angular-app/languageforge/lexicon/views/settings.html
@@ -2,75 +2,36 @@
 	<h2>{{project.projectname}} Settings</h2>
 	<tabset>
 		<tab heading="Project Properties">
-			<div data-ng-controller="ProjectSettingsPropertiesCtrl">
 			<form class="well" data-ng-submit="updateProject()">
-			<fieldset>
-				<label>Project Name</label>
-				<input type="text" placeholder="project name" data-ng-model="project.projectname"/>
-				<label>Project Code</label>
-				<input type="text" placeholder="project code" data-ng-model="project.projectCode"/>
-				<label class="checkbox"><input type="checkbox" data-ng-model="project.featured"/> Featured On Website</label>
-			</fieldset>
-			<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
+				<fieldset>
+					<label>Project Name</label>
+					<input type="text" placeholder="project name" data-ng-model="project.projectname"/>
+					<label>Project Code</label>
+					<input type="text" placeholder="project code" data-ng-model="project.projectCode"/>
+					<label class="checkbox"><input type="checkbox" data-ng-model="project.featured"/> Featured On Website</label>
+				</fieldset>
+				<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 			</form>
-			</div>
 		</tab>
-		<tab heading="Project Setup">
-			<div data-ng-controller="ProjectSettingsSetupCtrl">
-			<form class="well" data-ng-submit="updateProject()">
-			<div class="row">
-			<div class="span4">
-			<fieldset class="well picklists">
-				<legend>Show in the User's Profile</legend>
-				<ul class="unstyled">
-	  				<li data-ng-click="selectList(listId)" data-ng-repeat="(listId, list) in project.userProperties.userProfilePickLists" data-ng-class="{selected:currentListId == listId}"><div class="checkbox"><input data-ng-model="currentListsEnabled[listId]" type="checkbox"/>{{list.name}}</div></li>
-				</ul>
-			</fieldset>
-			</div><div class="span4">
-			<fieldset class="well">
-				<legend style="width:auto;">{{project.userProperties.userProfilePickLists[currentListId].name}}</legend>
-				<label>Default Value</label>
-				<select data-ng-model="project.userProperties.userProfilePickLists[currentListId].defaultKey" data-ng-options="item.key as item.value for item in project.userProperties.userProfilePickLists[currentListId].items"></select>
-				<table>
-					<thead>
-					<tr>
-						<td><input data-ng-model="newValue" type="text" placeholder="new value"/></td>
-						<td><a data-ng-click="pickAddItem()"><i class="icon-plus"></i></a></td>
-					</tr>
-					</thead>
-					<tbody>
-					<tr data-ng-repeat="item in project.userProperties.userProfilePickLists[currentListId].items track by $index">
-						<td>{{item.value}}</td>
-						<td><a data-ng-click="pickRemoveItem($index)"><i class="icon-remove"></i></a></td>
-					</tr>
-					</tbody>
-				</table>
-			</fieldset>
-			</div>
-			</div>
-			<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
-			</form>
-			</div>
-		</tab>
-		<tab select="readCommunicationSettings()" data-ng-show="$parent.canEditCommunicationSettings()" heading="Communication Settings">
-			<div data-ng-controller="ProjectSettingsCommunicationCtrl">
+		<tab heading="Communication Settings" select="readCommunicationSettings()" data-ng-show="true" disabled="rights.canEditCommunicationSettings">
 			<form class="well" data-ng-submit="updateCommunicationSettings()">
-			<fieldset>
-				<label>Twilio Account Username</label>
-				<input type="text" placeholder="(Twilio SID)" data-ng-model="settings.sms.accountId"/>
-				<label>Twillio Auth Token</label>
-				<input type="text" placeholder="(Twilio Auth Token)" data-ng-model="settings.sms.authToken"/>
-				<label>SMS From Number</label>
-				<input type="text" placeholder="(From Number)" data-ng-model="settings.sms.fromNumber"/>
-				<label>Email From (reply-to) Address</label>
-				<input type="email" placeholder="(From Email)" data-ng-model="settings.email.fromAddress"/>
-				<label>Email Name</label>
-				<input type="text" placeholder="(From Name)" data-ng-model="settings.email.fromName"/>
-			</fieldset>
-			<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
-			
+				<fieldset>
+					<label>Twilio Account Username</label>
+					<input type="text" placeholder="(Twilio SID)" data-ng-model="settings.sms.accountId"/>
+					<label>Twillio Auth Token</label>
+					<input type="text" placeholder="(Twilio Auth Token)" data-ng-model="settings.sms.authToken"/>
+					<label>SMS From Number</label>
+					<input type="text" placeholder="(From Number)" data-ng-model="settings.sms.fromNumber"/>
+					<label>Email From (reply-to) Address</label>
+					<input type="email" placeholder="(From Email)" data-ng-model="settings.email.fromAddress"/>
+					<label>Email Name</label>
+					<input type="text" placeholder="(From Name)" data-ng-model="settings.email.fromName"/>
+				</fieldset>
+				<button type="submit" class="btn"><i class="icon-ok"></i>Save</button>
 			</form>
-			</div>
 		</tab>
 	</tabset>
+	
+	<pre>project {{project | json}}</pre>
+	
 </div>
