wip adding translations into templates

--- a/src/angular-app/languageforge/lexicon/views/edit.html
+++ b/src/angular-app/languageforge/lexicon/views/edit.html
@@ -1,7 +1,7 @@
 <div class="container" data-ng-cloak data-ng-controller="editCtrl">
 	<div class="row">
 		<div class="span6 offset4">
-		<h2>Dictionary Browse and Edit</h2>
+		<h2>{{ 'Dictionary Browse and Edit' | translate }}</h2>
 		</div>
 	</div>
 	
