--- a/src/angular-app/languageforge/lexicon/views/configuration.html
+++ b/src/angular-app/languageforge/lexicon/views/configuration.html
@@ -1,7 +1,7 @@
 <div class="container" data-ng-cloak data-ng-controller="ConfigCtrl">
-<h2>Dictionary Configuration</h2>
+<h2>{{ 'Dictionary Configuration' | translate }}</h2>
 <form name="configForm">
-<button class="btn btn-primary pull-right" data-ng-disabled="configForm.$pristine" data-ng-click="configurationApply()" ><i class="icon-ok"></i> Apply</button>
+<button class="btn btn-primary pull-right" data-ng-disabled="configForm.$pristine" data-ng-click="configurationApply()" ><i class="icon-ok"></i> {{ 'Apply' | translate }}</button>
 <tabset>
 	<tab heading="Input Systems">
 		<div data-ng-include="'/angular-app/languageforge/lexicon/views/configuration-input-systems.html'"></div>
@@ -65,11 +65,11 @@
 			<div class="well">
 				<h3>{{fieldConfig[currentField.name].label}} Field Setup</h3>
 				<div class="control-group">
-					<label class="control-label" for="displayName">Display Name</label>
+					<label class="control-label" for="displayName">{{ 'Display Name' | translate }}</label>
 					<div class="controls">
 						<input type="text" id="displayName" data-ng-model="fieldConfig[currentField.name].label"/>
 						<label class="checkbox">
-							<input type="checkbox" disabled data-ng-model="fieldConfig[currentField.name].hideEmpty"/>Hidden if empty</label>
+							<input type="checkbox" disabled data-ng-model="fieldConfig[currentField.name].hideEmpty"/>{{ 'Hidden if empty' | translate }}</label>
 					</div>
 				</div>
 				
@@ -77,7 +77,7 @@
 					<hr />
 					<div class="row control-group" data-ng-show="editInputSystems.collapsed">
 						<div class="span3 picklists">
-							<label class="control-label" for="inputSystem">Input Systems</label>
+							<label class="control-label" for="inputSystem">{{ 'Input Systems' | translate }}</label>
 							<ul class="unstyled indent1"  id="inputSystem">
 								<li data-ng-click="currentField.inputSystems.tag = inputSystemTag" 
 									data-ng-repeat="inputSystemTag in currentField.inputSystems.fieldOrder" 
@@ -86,7 +86,7 @@
 										{{config.inputSystems[inputSystemTag].abbreviation}}</div>
 								</li>
 							</ul>
-							<a href="" data-ng-click="editInputSystems.collapsed = false">Edit input systems</a>
+							<a href="" data-ng-click="editInputSystems.collapsed = false">{{ 'Edit input systems' | translate }}</a>
 						</div>
 						<div class="span1 btn-group btn-group-vertical">
 							<button class="btn" data-ng-click="moveUp(currentField.inputSystems.tag)" 
