--- a/src/angular-app/languageforge/lexicon/views/edit.html
+++ b/src/angular-app/languageforge/lexicon/views/edit.html
@@ -1,7 +1,7 @@
 <div class="container" data-ng-cloak data-ng-controller="editCtrl">
 	<div class="row">
 		<div class="span6 offset4">
-		<h2>{{ 'Dictionary Browse and Edit' | translate }}</h2>
+		<h2 translate="Dictionary Browse and Edit"></h2>
 		</div>
 	</div>
 	
@@ -10,14 +10,14 @@
 		<div class="span4">
 			<!-- control buttons -->
 			<div class="control-group">
-				<button class="btn btn-success" data-ng-click="newEntry()"><i class="icon-plus"></i>New {{config.entry.fields.lexeme.label}}</button>
+				<button class="btn btn-success" data-ng-click="newEntry()"><i class="icon-plus"></i>{{ 'New Word' | translate }}</button>
 			</div>
 			
 			<div ng-show="show.entries.length > 0">
 			
     			<!-- entry list search -->
     			<div style="margin-bottom:10px">
-				<span class="pull-right" style="color: grey">{{entriesTotalCount}} entries</span>
+				<span class="pull-right" style="color: grey">{{ '{num} entries' | translate: '{ num: entriesTotalCount }' }}</span>
         			<typeahead style="margin:0px" class="typeahead" placeholder="'Search Entries'" items="typeahead.searchResults" term="typeahead.searchItemSelected" search="typeahead.searchEntries" select="typeahead.searchSelect">
         				<ul>
         					<li typeahead-item="e" data-ng-repeat="e in typeahead.searchResults" class="typeahead-item">
@@ -59,8 +59,8 @@
 						<i class="icon-save"></i>{{saveButtonTitle()}}</button>
 					<span style="color: grey; margin-right: 10px">
 						{{saveNotice()}}</span>
-					<button ng-show="control.canDeleteWord()" data-ng-click="deleteEntry(currentEntry)" class="btn btn-mini" title="Delete Word">
-						<i class="icon-remove"></i>{{config.entry.fields.lexeme.label}}</button>
+					<button ng-show="control.canDeleteWord()" data-ng-click="deleteEntry(currentEntry)" class="btn btn-mini" title="{{ 'Delete Word' | translate }}">
+						<i class="icon-remove"></i>{{ 'Word' | translate }}</button>
 				</div>
 				
 				<tab heading="Edit" active="editTab.active" select="selectEditTab()">
