--- a/src/angular-app/languageforge/lexicon/views/manage-users.html
+++ b/src/angular-app/languageforge/lexicon/views/manage-users.html
@@ -1,8 +1,8 @@
 <div class="container" data-ng-cloak data-ng-controller="manageUsersCtrl">
-	<h2>{{project.projectname}} User Management</h2>
+	<h2 translate="{projectName} User Management" translate-values="{{project.projectname}}"></h2>
 	<form data-ng-show="rights.showControlBar" class="control-bar form-inline">
-		<button data-ng-disabled="selected.length == 0" data-ng-show="rights.deleteOther" class="btn" data-ng-click="removeProjectUsers()"><i class="icon-remove"></i>Remove Members</button>
-		<button data-ng-show="rights.create" class="btn" data-ng-click="newUserCollapsed = !newUserCollapsed"><i class="icon-plus"></i>Add Members</button>
+		<button data-ng-disabled="selected.length == 0" data-ng-show="rights.deleteOther" class="btn" data-ng-click="removeProjectUsers()"><i class="icon-remove"></i>{{ 'Remove Members' | translate }}</button>
+		<button data-ng-show="rights.create" class="btn" data-ng-click="newUserCollapsed = !newUserCollapsed"><i class="icon-plus"></i>{{ 'Add Members' | translate }}</button>
 	</form>
 	<div class="new-item" data-collapse="!newUserCollapsed">
 		<form class="well form-inline">
@@ -23,9 +23,9 @@
 			<thead>
 			<tr>
 				<th></th>
-				<th>Username</th>
-				<th>Full Name</th>
-				<th>Role</th>
+				<th translate="Username"></th>
+				<th translate="Full Name"></th>
+				<th translate="Role"></th>
 			</tr>
 			</thead>
 			<tbody>
