--- a/src/angular-app/languageforge/lexicon/views/configuration.html
+++ b/src/angular-app/languageforge/lexicon/views/configuration.html
@@ -1,12 +1,12 @@
 <div class="container" data-ng-cloak data-ng-controller="ConfigCtrl">
 <h2>{{ 'Dictionary Configuration' | translate }}</h2>
 <form name="configForm">
-<button class="btn btn-primary pull-right" data-ng-disabled="configForm.$pristine" data-ng-click="configurationApply()" ><i class="icon-ok"></i> {{ 'Apply' | translate }}</button>
+<button class="btn btn-primary {{interfaceConfig.pullToSide}}" data-ng-disabled="configForm.$pristine" data-ng-click="configurationApply()" ><i class="icon-ok"></i> {{ 'Apply' | translate }}</button>
 <tabset>
-	<tab heading="Input Systems">
+	<tab heading="Input Systems" class="{{interfaceConfig.pullNormal}}">
 		<div data-ng-include="'/angular-app/languageforge/lexicon/views/configuration-input-systems.html'"></div>
 	</tab>
-	<tab heading="Fields">
+	<tab heading="Fields" class="{{interfaceConfig.pullNormal}}">
 		<div data-ng-controller="FieldConfigCtrl">
 		<div class="row">
 		
@@ -68,9 +68,12 @@
 					<label class="control-label" for="displayName">{{ 'Display Name' | translate }}</label>
 					<div class="controls">
 						<input type="text" id="displayName" data-ng-model="fieldConfig[currentField.name].label"/>
-						<label class="checkbox">
+					</div>
+					<div class="controls">
+						<label class="checkbox {{interfaceConfig.pullNormal}}">
 							<input type="checkbox" disabled data-ng-model="fieldConfig[currentField.name].hideEmpty"/>{{ 'Hidden if empty' | translate }}</label>
 					</div>
+					<br />
 				</div>
 				
 				<div data-ng-if="fieldConfig[currentField.name].inputSystems != undefined">
@@ -98,7 +101,7 @@
 						</div>
 					</div>
 					<div data-collapse="editInputSystems.collapsed">
-						<button class="btn btn-primary pull-right" 
+						<button class="btn btn-primary {{interfaceConfig.pullToSide}}" 
 							data-ng-click="editInputSystems.done()"><i class="icon-ok"></i> Done</button>
 						<h3 style="font-weight:normal">Edit Input Systems</h3>
 						<div data-ng-include="'/angular-app/languageforge/lexicon/views/configuration-input-systems.html'"></div>
@@ -116,7 +119,7 @@ config.entry {{config.entry|json}}
  -->
 		</div>
 	</tab>
-	<tab heading="Tasks">
+	<tab heading="Tasks" class="{{interfaceConfig.pullNormal}}">
 		<div data-ng-controller="TaskConfigCtrl">
 		<div class="row">
 		
@@ -215,10 +218,10 @@ config.entry {{config.entry|json}}
 						<dt>Senses</dt>
 						<dd>
 							<div class="controls">
-								<label class="checkbox">
+								<label class="checkbox {{interfaceConfig.pullNormal}}">
 									<input type="checkbox" data-ng-model="config.tasks['semdom'].visibleFields.definition">
 									 Definition (Meaning)</label>
-								<label class="checkbox">
+								<label class="checkbox {{interfaceConfig.pullNormal}}">
 									<input type="checkbox" data-ng-model="config.tasks['semdom'].visibleFields.partOfSpeech">
 									 Part Of Speech</label>
 							</div>
@@ -226,10 +229,10 @@ config.entry {{config.entry|json}}
 						<dt>Examples</dt>
 						<dd>
 							<div class="controls">
-								<label class="checkbox">
+								<label class="checkbox {{interfaceConfig.pullNormal}}">
 									<input type="checkbox" data-ng-model="config.tasks['semdom'].visibleFields.sentence">
 									 Example Sentence</label>
-								<label class="checkbox">
+								<label class="checkbox {{interfaceConfig.pullNormal}}">
 									<input type="checkbox" data-ng-model="config.tasks['semdom'].visibleFields.translation">
 									 Example Translation</label>
 							</div>
