--- a/src/angular-app/scriptureforge/sfchecks/partials/projectSettings.html
+++ b/src/angular-app/scriptureforge/sfchecks/partials/projectSettings.html
@@ -7,7 +7,7 @@
 			<button data-ng-show="rights.create" class="btn" data-ng-click="newUserCollapsed = !newUserCollapsed"><i class="icon-plus"></i>Add Members</button>
 			<button data-ng-disabled="selected.length == 0" data-ng-show="rights.create" class="btn" data-ng-click="newMessageCollapsed = !newMessageCollapsed"><i class="icon-envelope"></i>Message Selected Users</button>
 		</form>
-		<div class="new-item" collapse="!newUserCollapsed">
+		<div class="new-item" data-collapse="!newUserCollapsed">
 			<form class="well form-inline">
 			<typeahead class="typeahead" items="users" term="typeahead.userName" search="queryUser" select="selectUser">
 				<ul>
@@ -21,14 +21,14 @@
 			<button data-ng-model="addMode" class="btn" data-ng-disabled="!typeahead.userName" data-ng-click="addProjectUser()"><i data-ng-class="addModeIcon(addMode)"></i>{{addModeText(addMode)}}</button>
 			</form>
 		</div>
-		<div collapse="newMessageCollapsed">
+		<div data-collapse="newMessageCollapsed">
 			<form class="well" data-ng-submit="sendMessageToSelectedUsers()">
 			<fieldset>
 				<p style="color:red">All fields are required to message selected users</p>
 				<label>Email Subject</label>
 				<input name="emailSubject" required type="text" placeholder="Subject" data-ng-model="message.subject"/>
 				<label>Email Message</label>
-				<textarea name="emailTemplate" required data-ng-model="message.emailTemplate" pui-jqte="jqteOptions"></textarea>
+				<textarea name="emailTemplate" required data-ng-model="message.emailTemplate" data-pui-jqte="jqteOptions"></textarea>
 				<label>SMS Message <i>({{160 - message.smsTemplate.length}} characters remaining)</i></label>
 				<textarea required name="smsTemplate" placeholder="SMS Message" data-ng-model="message.smsTemplate" style="width:400px; height:80px" maxlength="160"></textarea>
 			</fieldset>
@@ -57,6 +57,41 @@
 			</tbody>
 		</table>		
 		</div>
+		</div>
+	</tab>
+	<tab heading="Question Templates">
+		<div data-ng-controller="ProjectSettingsQTemplateCtrl" style="overflow:hidden">
+			<form class="control-bar form-inline">
+				<button class="btn" data-ng-disabled="selected.length == 0" data-ng-click="removeTemplates()"><i class="icon-remove"></i>Remove Templates</button>
+				<button class="btn" data-ng-click="toggleTemplateEditor()"><i class="icon-plus"></i>Add New Template</button>
+			</form>
+			<div class="new-item" data-collapse="!templateEditorVisible">
+				<form class="well">
+				<fieldset>
+				<label>Question Template</label>
+				<textarea required data-ng-model="editedTemplate.description" class="span4" rows="4" placeholder="The Question"></textarea>
+				<label></label>
+				<input type="text" maxlength="35" required data-ng-model="editedTemplate.title" class="span4" rows="4" placeholder="One Line Summary for Title" />
+				<label></label>
+				<button type="submit" class="btn" data-ng-click="editTemplate()"><i class="icon-ok"></i>Save</button>
+				<a data-ng-click="hideTemplateEditor()">Cancel</a>
+				</fieldset>
+				</form>
+			</div>
+			<div listview search="queryTemplates()" items="templates" visible-items="visibleTemplates" select="">
+			<table style="width: 100%">
+				<tr>
+					<th></th>
+					<th class="span3">Question title</th>
+					<th>Question contents</th>
+				</tr>
+				<tr data-ng-repeat="template in visibleTemplates" data-ng-class="{active: isSelected(template)}" data-ng-click="selectRow($index, template)" >
+					<td width="16px" align="center"><input type="checkbox" data-ng-checked="isSelected(template)" data-ng-click="updateSelection($event, template)" /></td>
+					<td><a title="Click to edit this template" data-ng-click="showTemplateEditor(template)">{{template.title}}</a></td>
+					<td style="text-overflow: ellipsis">{{template.description}}</td>
+				</tr>
+			</table>
+			</div>
 		</div>
 	</tab>
 	<tab heading="Project Properties">
