prevent project and project settings page from "flashing" before page loads

--- a/src/angular-app/scriptureforge/sfchecks/partials/projectSettings.html
+++ b/src/angular-app/scriptureforge/sfchecks/partials/projectSettings.html
@@ -1,3 +1,4 @@
+<div ng-show="finishedLoading">
 <h2 style="font-weight:normal">{{project.projectname}} Settings</h2>
 <tabset>
 	<tab heading="Users">
@@ -166,3 +167,4 @@
 		</div>
 	</tab>
 </tabset>
+</div>
