Improve filter feature in listview
When the listview filter feature was written simply in the form of
"items='someValue | filter:someOtherValue'", everything worked fine when
loading pages normally. But when running E2E tests through Protractor,
errors like "[$rootScope:infdig] 10 $digest() iterations reached." were
showing up. The more complex approach in this commit, where the
directive itself becomes filter-aware, allows it to work both in normal
use cases and also in E2E test scenarios.


Former-commit-id: aff3730814adc26c3b920c4f06f7b3b4d0b50e83

--- a/src/angular-app/scriptureforge/sfchecks/partials/projectSettings.html
+++ b/src/angular-app/scriptureforge/sfchecks/partials/projectSettings.html
@@ -38,7 +38,7 @@
 			
 			</form>
 		</div>
-		<div listview search="queryProjectSettings()" items="list.users | filter: userFilter" visible-items="list.visibleUsers" select="">
+		<div listview search="queryProjectSettings()" items="list.users" items-filter="userFilter" visible-items="list.visibleUsers" select="">
 		<!-- <div listview search="queryProjectUsers()" select=""> -->
 		<table class="table" style="width: 100%">
 			<thead>
