Updates to Activity E2E test: Add own answer.  WIP finding where to add comment to an answer.
Former-commit-id: 6e0405c890407db563f99f4b55df2410a589ab14

--- a/src/angular-app/scriptureforge/sfchecks/partials/question.html
+++ b/src/angular-app/scriptureforge/sfchecks/partials/question.html
@@ -41,7 +41,7 @@
 			<form ng-submit="submitAnswer()">
 				<textarea required ng-model="newAnswer.content" pui-jqte="jqteOptions"></textarea>
 				<div ng-hide="unreadResponseCount() == 0" class="right badge badge-important">{{unreadResponseCount()}} new response<span ng-show="unreadResponseCount() > 1">s</span></div>
-				<button type="submit" class="btn">Done</button>
+				<button type="submit" class="btn" id="doneBtn">Done</button>
 			</form>
 		</div>
 	</div>
